# code_agentic_ai

./: README.md  pyproject.toml
examples/: quickstart_client.ipynb  quickstart_server.ipynb
src/agentic_ai_mcp/: __init__.py  client.py  orchestrator.py  shared_state.py
src/agentic_ai_mcp/tools/: registry.py
tests/: test_client.py  test_orchestrator.py  test_server.py
