[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ai-mcp"
version = "0.6.5"
description = "A lightweight agentic AI framework with MCP tool serving"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Jawad Chowdhury", email = "hasanjawad001@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = ["ai", "agents", "multi-agent", "llm", "mcp", "langgraph", "anthropic"]

dependencies = [
    "fastmcp>=2.0.0",
    "mcp>=1.0.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "cloudpickle>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/hasanjawad001/agentic-ai-mcp"
Documentation = "https://github.com/hasanjawad001/agentic-ai-mcp#readme"
Repository = "https://github.com/hasanjawad001/agentic-ai-mcp.git"
Issues = "https://github.com/hasanjawad001/agentic-ai-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["agentic_ai_mcp"]
warn_return_any = true
warn_unused_configs = true
strict_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["mcp.*", "langchain.*", "langgraph.*", "fastmcp.*", "pydantic.*", "langchain_anthropic.*", "langchain_openai.*", "pydantic_settings.*", "cloudpickle.*", "cloudpickle"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = [
    "ARG001",  # unused arguments (stub/demo functions)
    "E402",    # module import not at top of file
    "E722",    # bare except
]

[tool.ruff.lint.isort]
known-first-party = ["agentic_ai_mcp"]

[tool.coverage.run]
source = ["src/agentic_ai_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
